fix: wrap table in div, use caption element

--- a/src/css/layouts/_table.css
+++ b/src/css/layouts/_table.css
@@ -1,4 +1,4 @@
-figure[tabindex] {
+[role="region"][tabindex] {
     background:
         linear-gradient(to right, var(--ll-background-color) 30%, var(--ll-background-color-transparent)),
         linear-gradient(to right, var(--ll-background-color-transparent), var(--ll-background-color) 70%) 0 100%,
@@ -24,24 +24,9 @@ figure[tabindex] {
     overflow: auto;
 }
 
-figure[tabindex]:focus {
+[role="region"][tabindex]:focus {
     box-shadow: var(--ll-link-focus-box-shadow);
     outline: none;
-}
-
-figure[tabindex] figcaption {
-    font-size: var(--step--1);
-    font-style: italic;
-    margin-block-start: var(--step--4);
-    text-align: center;
-}
-
-figure[tabindex] * + table {
-    margin-block-start: var(--step--5);
-}
-
-figure[tabindex] * + figcaption {
-    margin-block-end: var(--step--4);
 }
 
 table {
@@ -49,6 +34,22 @@ table {
     border-collapse: separate;
     border-spacing: 0.25rem;
     width: 100%;
+}
+
+[data-caption="bottom"] {
+    caption-side: bottom;
+}
+
+caption {
+    font-size: var(--step--1);
+    font-style: italic;
+    margin-block-end: var(--step--4);
+    text-align: center;
+}
+
+[data-caption="bottom"] caption {
+    margin-block-end: 0;
+    margin-block-start: var(--step--4);
 }
 
 thead,
